Staff List API Integration

--- a/Hospital-IPD-management-application/src/app/shared/side-menu/side-menu.component.html
+++ b/Hospital-IPD-management-application/src/app/shared/side-menu/side-menu.component.html
@@ -71,9 +71,16 @@
     <ul class="menu-inner py-1">
       <!-- Dashboard -->
       <li class="menu-item active">
-        <a href="index.html" class="menu-link">
+        <a [routerLink]="['/dashboard']" class="menu-link">
           <i class="menu-icon tf-icons bx bx-home-circle"></i>
           <div data-i18n="Analytics">Dashboard</div>
+        </a>
+      </li>
+
+      <li class="menu-item">
+        <a [routerLink]="['/staff']" class="menu-link">
+          <i class="menu-icon tf-icons bx bx-home-circle"></i>
+          <div data-i18n="Analytics">Staff</div>
         </a>
       </li>
 
