--- a/Hospital-IPD-management-application/src/app/staff/components/staff-list/staff-list.component.html
+++ b/Hospital-IPD-management-application/src/app/staff/components/staff-list/staff-list.component.html
@@ -1,81 +1,58 @@
+<div class="container-xxl flex-grow-1 container-p-y">
 
-          <!-- Content wrapper -->
-          <div class="content-wrapper">
-            <!-- Content -->
+  <!-- Bootstrap Table with Header - Light -->
+  <div class="card">
 
-            <div class="container-xxl flex-grow-1 container-p-y">
-              <h4 class="fw-bold py-3 mb-4"><span class="text-muted fw-light">Tables /</span> Basic Tables</h4>
+    <div class="card-header d-flex justify-content-between align-items-center">
+      <h5 class="mb-0">Staff</h5>
+      <small class="text-muted float-end">
+        <a [routerLink]="['/staff/details']">
+          <button type="button" class="btn btn-primary">Add</button>
+        </a>
+      </small>
+    </div>
 
-
-
-             
-
-              <!-- Bootstrap Table with Header - Light -->
-              <div class="card">
-                <h5 class="card-header">Light Table head</h5>
-                <div class="table-responsive text-nowrap">
-                  <table class="table">
-                    <thead class="table-light">
-                      <tr>
-                        <th>User Name</th>
-                        <th>Email</th>
-                        <th>Role</th>
-                        <th>Mobile</th>
-                      </tr>
-                    </thead>
-                    <tbody class="table-border-bottom-0">
-                      <tr *ngFor="let staff of staffList">
-                        <td><i class="fab fa-angular fa-lg text-danger me-3"></i> <strong>{{staff.username}}</strong></td>
-                        <td>{{staff.email}}</td>
-                        <td>{{staff.role}}</td>
-                        <td>{{staff.mobile}}</td>
-                      </tr>
-                      
-                    </tbody>
-                  </table>
-                </div>
-              </div>
-              <!-- Bootstrap Table with Header - Light -->
-
-              <hr class="my-5" />
-
-
-            </div>
-            <!-- / Content -->
-
-            <!-- Footer -->
-            <footer class="content-footer footer bg-footer-theme">
-              <div class="container-xxl d-flex flex-wrap justify-content-between py-2 flex-md-row flex-column">
-                <div class="mb-2 mb-md-0">
-                  ©
-                  <script>
-                    document.write(new Date().getFullYear());
-                  </script>
-                  , made with ❤️ by
-                  <a href="https://themeselection.com" target="_blank" class="footer-link fw-bolder">ThemeSelection</a>
-                </div>
-                <div>
-                  <a href="https://themeselection.com/license/" class="footer-link me-4" target="_blank">License</a>
-                  <a href="https://themeselection.com/" target="_blank" class="footer-link me-4">More Themes</a>
-
-                  <a
-                    href="https://themeselection.com/demo/sneat-bootstrap-html-admin-template/documentation/"
-                    target="_blank"
-                    class="footer-link me-4"
-                    >Documentation</a
+    <div class="table-responsive text-nowrap">
+      <table class="table">
+        <thead class="table-light">
+          <tr>
+            <th>Name</th>
+            <th>User Name</th>
+            <th>Email</th>
+            <th>Role</th>
+            <th>Mobile</th>
+            <th></th>
+          </tr>
+        </thead>
+        <tbody class="table-border-bottom-0">
+          <tr *ngFor="let staff of staffList">
+            <td><i class="fab fa-angular fa-lg text-danger me-3"></i> <strong>{{staff.firstName}}
+                {{staff.lastName}}</strong></td>
+            <th>{{staff.username}}</th>
+            <td>{{staff.email}}</td>
+            <td>{{staff.role}}</td>
+            <td>{{staff.mobile}}</td>
+            <td>
+              <div class="dropdown">
+                <button type="button" class="btn p-0 dropdown-toggle hide-arrow" data-bs-toggle="dropdown">
+                  <i class="bx bx-dots-vertical-rounded"></i>
+                </button>
+                <div class="dropdown-menu">
+                  <a class="dropdown-item" [routerLink]="['/staff/details', staff.id]"
+                    ><i class="bx bx-edit-alt me-2"></i> Edit</a
                   >
-
-                  <a
-                    href="https://github.com/themeselection/sneat-html-admin-template-free/issues"
-                    target="_blank"
-                    class="footer-link me-4"
-                    >Support</a
+                  <a class="dropdown-item" (click)="deleteStaff(staff.id)"
+                    ><i class="bx bx-trash me-2"></i> Delete</a
                   >
                 </div>
               </div>
-            </footer>
-            <!-- / Footer -->
+            </td>
+          </tr>
 
-            <div class="content-backdrop fade"></div>
-          </div>
-       
+        </tbody>
+      </table>
+    </div>
+  </div>
+  <!-- Bootstrap Table with Header - Light -->
+
+</div>
