--- a/Hospital-IPD-management-application/src/app/staff/components/staff-list/staff-list.component.html
+++ b/Hospital-IPD-management-application/src/app/staff/components/staff-list/staff-list.component.html
@@ -41,7 +41,7 @@
                   <a class="dropdown-item" [routerLink]="['/staff/details', staff.id]"
                     ><i class="bx bx-edit-alt me-2"></i> Edit</a
                   >
-                  <a class="dropdown-item" (click)="deleteStaff(staff.id)"
+                  <a class="dropdown-item" (click)="deleteStaff(staff)"
                     ><i class="bx bx-trash me-2"></i> Delete</a
                   >
                 </div>
