Patient Details Integration - DONE

--- a/Hospital-IPD-management/src/app/patient/components/patient-list/patient-list.component.html
+++ b/Hospital-IPD-management/src/app/patient/components/patient-list/patient-list.component.html
@@ -12,9 +12,9 @@
         </small>
       </div>
   
-      <pre>
+      <!-- <pre>
         {{patientList | json}}
-      </pre>
+      </pre> -->
 
       <div class="table-responsive text-nowrap">
         <table class="table">
