--- a/Hospital-IPD-management/src/app/shared/side-menu/side-menu.component.html
+++ b/Hospital-IPD-management/src/app/shared/side-menu/side-menu.component.html
@@ -77,6 +77,18 @@
         </a>
       </li>
 
+      
+      <li class="menu-header small text-uppercase"><span class="menu-header-text">Patient</span></li>
+      <li class="menu-item">
+        <a [routerLink]="['/patient']" class="menu-link">
+          <i class="menu-icon tf-icons bx bx-home-circle"></i>
+          <div data-i18n="Analytics">Patient</div>
+        </a>
+      </li>
+     
+      <!-- Misc -->
+      <li class="menu-header small text-uppercase"><span class="menu-header-text">Admin</span></li>
+      
       <li class="menu-item">
         <a [routerLink]="['/staff']" class="menu-link">
           <i class="menu-icon tf-icons bx bx-home-circle"></i>
@@ -92,9 +104,15 @@
         </a>
       </li>
 
-     
-      <!-- Misc -->
-      <li class="menu-header small text-uppercase"><span class="menu-header-text">Misc</span></li>
+      <li class="menu-item">
+        <a [routerLink]="['/medicine']" class="menu-link">
+          <i class="menu-icon tf-icons bx bx-home-circle"></i>
+          <div data-i18n="Analytics">Medicine</div>
+        </a>
+      </li>
+
+      <li class="menu-header small text-uppercase"><span class="menu-header-text">Support</span></li>
+      
       <li class="menu-item">
         <a
           href="https://github.com/themeselection/sneat-html-admin-template-free/issues"
