--- a/Hospital-IPD-management/src/app/patient/components/patient-details/patient-details.component.html
+++ b/Hospital-IPD-management/src/app/patient/components/patient-details/patient-details.component.html
@@ -1,41 +1,68 @@
 <div class="container-xxl flex-grow-1 container-p-y">
-    <!-- Form Layout -->
-    <div class="row">
-      <div class="col-xxl">
-        <div class="card mb-4">
-          <div class="card-header d-flex align-items-center justify-content-between">
-            <h5 class="mb-0">Room Form</h5>
-          </div>
-          <div class="card-body">
-            <!-- Form -->
-            <form [formGroup]="roomForm" (ngSubmit)="saveOrUpdateRoom()">
-              <div class="row mb-3">
-                <label class="col-sm-2 col-form-label" for="name">Room Name</label>
-                <div class="col-sm-10">
-                  <input type="text" class="form-control" id="name" formControlName="name" placeholder="Enter room name" />
-                </div>
+  <!-- Form Layout -->
+  <div class="row">
+    <div class="col-xxl">
+      <div class="card mb-4">
+        <div class="card-header d-flex align-items-center justify-content-between">
+          <h5 class="mb-0">Patient Form</h5>
+        </div>
+        <div class="card-body">
+          <!-- Form -->
+          <form [formGroup]="patientForm" (ngSubmit)="saveOrUpdatePatient()">
+            <div class="row mb-3">
+              <label class="col-sm-2 col-form-label" for="firstName">First Name</label>
+              <div class="col-sm-10">
+                <input type="text" class="form-control" id="firstName" formControlName="firstName" placeholder="Enter first name" />
               </div>
-              <div class="row mb-3">
-                <label class="col-sm-2 col-form-label" for="charges">Charges</label>
-                <div class="col-sm-10">
-                  <input type="number" class="form-control" id="charges" formControlName="charges" placeholder="Enter charges" />
-                </div>
+            </div>
+            <div class="row mb-3">
+              <label class="col-sm-2 col-form-label" for="lastName">Last Name</label>
+              <div class="col-sm-10">
+                <input type="text" class="form-control" id="lastName" formControlName="lastName" placeholder="Enter last name" />
               </div>
-              <div class="row mb-3">
-                <label class="col-sm-2 col-form-label" for="description">Description</label>
-                <div class="col-sm-10">
-                  <textarea class="form-control" id="description" formControlName="description" placeholder="Enter room description"></textarea>
-                </div>
+            </div>
+            <div class="row mb-3">
+              <label class="col-sm-2 col-form-label" for="gender">Gender</label>
+              <div class="col-sm-10">
+                <select class="form-control" id="gender" formControlName="gender">
+                  <option value="" disabled>Select gender</option>
+                  <option value="Male">Male</option>
+                  <option value="Female">Female</option>
+                </select>
               </div>
-              <div class="row justify-content-end">
-                <div class="col-sm-10">
-                  <button type="submit" class="btn btn-primary" [disabled]="roomForm.invalid">Submit</button>
-                </div>
+            </div>
+            <div class="row mb-3">
+              <label class="col-sm-2 col-form-label" for="age">Age</label>
+              <div class="col-sm-10">
+                <input type="number" class="form-control" id="age" formControlName="age" placeholder="Enter age" />
               </div>
-            </form>
-          </div>
+            </div>
+            <div class="row mb-3">
+              <label class="col-sm-2 col-form-label" for="contactNumber">Contact Number</label>
+              <div class="col-sm-10">
+                <input type="text" class="form-control" id="contactNumber" formControlName="contactNumber" placeholder="Enter contact number" />
+              </div>
+            </div>
+            <div class="row mb-3">
+              <label class="col-sm-2 col-form-label" for="address">Address</label>
+              <div class="col-sm-10">
+                <textarea class="form-control" id="address" formControlName="address" placeholder="Enter address"></textarea>
+              </div>
+            </div>
+            <div class="row mb-3">
+              <label class="col-sm-2 col-form-label" for="email">Email</label>
+              <div class="col-sm-10">
+                <input type="email" class="form-control" id="email" formControlName="email" placeholder="Enter email" />
+              </div>
+            </div>
+            <div class="row justify-content-end">
+              <div class="col-sm-10">
+                <button type="submit" class="btn btn-primary" [disabled]="patientForm.invalid">Submit</button>
+              </div>
+            </div>
+          </form>
         </div>
       </div>
     </div>
   </div>
-  
+</div>
