--- a/Hospital-IPD-management/src/app/medicine/components/medicine-details/medicine-details.component.html
+++ b/Hospital-IPD-management/src/app/medicine/components/medicine-details/medicine-details.component.html
@@ -1,1 +1,41 @@
-<p>medicine-details works!</p>
+<div class="container-xxl flex-grow-1 container-p-y">
+    <!-- Form Layout -->
+    <div class="row">
+      <div class="col-xxl">
+        <div class="card mb-4">
+          <div class="card-header d-flex align-items-center justify-content-between">
+            <h5 class="mb-0">Medicine Form</h5>
+          </div>
+          <div class="card-body">
+            <!-- Form -->
+            <form [formGroup]="medicineForm" (ngSubmit)="saveOrUpdateMedicine()">
+              <div class="row mb-3">
+                <label class="col-sm-2 col-form-label" for="name">Medicine Name</label>
+                <div class="col-sm-10">
+                  <input type="text" class="form-control" id="name" formControlName="name" placeholder="Enter medicine name" />
+                </div>
+              </div>
+              <div class="row mb-3">
+                <label class="col-sm-2 col-form-label" for="description">Description</label>
+                <div class="col-sm-10">
+                  <textarea class="form-control" id="description" formControlName="description" placeholder="Enter medicine description"></textarea>
+                </div>
+              </div>
+              <div class="row mb-3">
+                <label class="col-sm-2 col-form-label" for="price">Price</label>
+                <div class="col-sm-10">
+                  <input type="number" class="form-control" id="price" formControlName="price" placeholder="Enter price" />
+                </div>
+              </div>
+              <div class="row justify-content-end">
+                <div class="col-sm-10">
+                  <button type="submit" class="btn btn-primary" [disabled]="medicineForm.invalid">Submit</button>
+                </div>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  
