--- a/Hospital-IPD-management/src/app/shared/side-menu/side-menu.component.html
+++ b/Hospital-IPD-management/src/app/shared/side-menu/side-menu.component.html
@@ -85,7 +85,12 @@
           <div data-i18n="Analytics">Patient</div>
         </a>
       </li>
-     
+      <li class="menu-item">
+        <a [routerLink]="['/admissions']" class="menu-link">
+          <i class="menu-icon tf-icons bx bx-home-circle"></i>
+          <div data-i18n="Analytics">Admissions</div>
+        </a>
+      </li>
       <!-- Misc -->
       <li class="menu-header small text-uppercase"><span class="menu-header-text">Admin</span></li>
       
