--- a/Hospital-IPD-management/src/app/patient/components/patient-list/patient-list.component.html
+++ b/Hospital-IPD-management/src/app/patient/components/patient-list/patient-list.component.html
@@ -46,7 +46,7 @@
                   </button>
                   <div class="dropdown-menu">
 
-                    <a class="dropdown-item" (click)="assignMedicine(patient)"
+                    <a class="dropdown-item" 
                       ><i class="bx bx-edit-alt me-2"></i> Assign Medicine</a
                     >
 
